# fluentedge

./: .env.example  .gitignore  CURSOR_PROMPTS_ALL.md  FluentEdge_Sprint2_Design_and_Requirements_Specification.md  FluentEdge_Sprint4_Prototype_Implementation_Document.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  feature.yml
.github/workflows/: ci.yml  container.yml  docs.yml  manual-local-evidence.yml
api/: Dockerfile
api/app/: __init__.py  config.py  exceptions.py  main.py  metrics.py  schemas.py
api/static/: index.html
data/: README.md
docs/data/: dataset_card.md
docs/evidence/: MANUAL_SCREENSHOT_CHECKLIST.md  README.md  SPRINT2_EVIDENCE_SUMMARY.md
docs/project-management/: branch-protection.md  confluence-replacement-waiver.md  github-project-setup.md  sprint4-closeout.md
infrastructure/: compose.yaml
infrastructure/localstack/: init-aws.sh
infrastructure/sam/: README.md  samconfig.toml.example  template.yaml
infrastructure/terraform/: README.md
ml/: __init__.py
ml/data/: __init__.py  preprocess.py  schema.py  split.py  validate.py
scripts/: approve_model.py  audit_github_setup.sh  bootstrap_github.sh  bootstrap_local.sh  capture_evidence_screenshots.py  cleanup_local.sh  export_project_evidence.sh  generate_artifact_inventory.py  healthcheck.sh  render_sprint4_pdf.py  run_sprint4_validation.py  validate_docs.py  verify_retention.py
templates/: github-project-config.example.env
tests/: __init__.py  conftest.py
(+66 files in other folders)
